unpackaged/main/default/objects/Non_Compliance__c/Non_Compliance__c.object-meta.xml
<CustomObject>
    <label>Non-Compliance</label>
    <nameField>
        <label>Standard #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non-Compliances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>