unpackaged/main/default/objects/Non_Compliance__c/fields/Agreed_To_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Agreed_To_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I confirm that these non-compliances were identified during this assessment and the assessor adhered to biosecurity and health and safety requirements.</inlineHelpText>
    <label>Agreed To Disclaimer</label>
    <type>Checkbox</type>
</CustomField>