unpackaged/main/default/objects/Non_Compliance__c/fields/Assessment_Report__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Report__c</fullName>
    <label>Assessment Report</label>
    <referenceTo>Assessment_Report__c</referenceTo>
    <relationshipLabel>Non-Compliances</relationshipLabel>
    <relationshipName>Non_Compliances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>