unpackaged/main/default/objects/Non_Compliance__c/fields/Evidence_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evidence Submitted</label>
    <type>Checkbox</type>
</CustomField>