unpackaged/main/default/objects/Non_Compliance__c/fields/Non_compliance__c.field-meta.xml
<CustomField>
    <fullName>Non_compliance__c</fullName>
    <description>Description of the non-compliance and required rectification.</description>
    <inlineHelpText>Description of the non-compliance and required rectification.</inlineHelpText>
    <label>Non-compliance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>