unpackaged/main/default/objects/Non_Compliance__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <inlineHelpText>Other evidence</inlineHelpText>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>