unpackaged/main/default/objects/Non_Compliance__c/fields/Rectification__c.field-meta.xml
<CustomField>
    <fullName>Rectification__c</fullName>
    <description>Complete by the member via communities by clicking on the link in the email with their assessment report; they cannot submit their evidence unless the member has entered something in this field.</description>
    <inlineHelpText>Please explain what you have done to correct the non-compliance.</inlineHelpText>
    <label>Rectification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>