unpackaged/main/default/objects/Non_Compliance__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <description>The full written standard.</description>
    <inlineHelpText>The full written standard.</inlineHelpText>
    <label>Standard</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>